# univacity_mcp

./: .gitignore  README.md  githubOauth.md  pyproject.toml  requirements.txt  wrangler.toml
.kiro/specs/student-recommendation-mcp-server/: design.md  notes.md  requirements.md  tasks.md
src/: api_server.py  config.py  country_dataload.ipynb  db_design.ipynb  explore_gold_data.ipynb  index.js  institute_dataload.ipynb  program_dataload.ipynb  requirements.txt  server.py  test_db.py  test_mcp_oauth.py
